build(chainlit): create dockerfile for chainlit application
initial dockerfile to run chainlit via docker compose, mount volumes to docker and install much smaller version of deepseek: `deepseek-r1:1.5b`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,29 @@
 services:
+  chainlit:
+    platform: "linux/amd64"
+    build:
+      dockerfile: ".chainlit/Dockerfile"
+    environment:
+      - OLLAMA_URL=http://ollama:11434
+      - QDRANT_DATABASE_URL=http://qdrantdb:6333
+    volumes:
+      - chainlit:/code/.files
+    ports:
+      - "8000:8000"
+    restart: always
+    depends_on:
+      - ollama
+      - ollama-setup
+      - qdrantdb
+
   qdrantdb:
     image: qdrant/qdrant:${QDRANT_TAG:-latest}
     ports:
       - "6333:6333"
       - "6334:6334"
+    volumes:
+      - qdrant_storage:/qdrant/storage:z
+    restart: always
 
   ollama:
     image: ollama/ollama:${OLLAMA_TAG:-latest}
@@ -18,9 +38,11 @@ services:
   ollama-setup:
     build: .
     environment:
-      - OLLAMA_MODELS=deepseek-r1:7b
+      - OLLAMA_MODELS=deepseek-r1:7b,deepseek-r1:1.5b
     depends_on:
       - ollama
 
 volumes:
+  chainlit:
   ollama:
+  qdrant_storage:
