--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4>=4.13.4
 chainlit>=2.1.0
 docling>=2.17.0
 fastembed>=0.4.2
@@ -16,3 +17,4 @@ pydantic-settings>=2.7.0
 qdrant-client>=1.12.1
 sentence-transformers>=3.4.1
 unstructured[mdpdf]>=0.16.17
+html2text>=2025.4.15
